--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/microblog
+spring.datasource.url=jdbc:h2:./main
 spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=none
